Table users {
  id int [primary key]
  username varchar [not null]
  password varchar [not null]
  first_name varchar
  last_name varchar
  role role
  archived bool [not null, note: 'default false']
  created_at timestamp
  updated_at timestamp
}

Table users_tokens {
  refresh_token varchar [primary key, not null]
  user_id int [ref: > users.id, not null]
  expiredAt timestamp [not null]
}

Table companies {
  id int [primary key]
  name varchar [not null]
  about text
  logo_url varchar [note: 'path to company logo image']
  verified bool [not null, note: 'default false']
  archived bool [not null, note: 'default false']
  user_id int [ref: > users.id, not null]
  category_id int [ref: > categories.id, not null]
  created_at timestamp
  updated_at timestamp
}

Table banks {
  id int [primary key]
  name varchar [not null]
  logo_url varchar [note: 'path to bank logo image', not null]
  archived bool [not null, note: 'default false']
  created_at timestamp
  updated_at timestamp
}

Table stores {
  id int [primary key]
  company_id int [ref: > companies.id, not null]
  country_id int [not null]
  city_id int [not null]
  address varchar [not null]
  latitude float [not null]
  longitude float [not null]
  open_at time
  close_at time
  archived bool [not null, note: 'default false']
  created_at timestamp
  updated_at timestamp
}

Table benefits {
  id int [primary key]
  type benefit_type
  size int [not null, note: 'from 0 to 100 (default 0)']
  message text
  start_at date [not null]
  end_at date [not null]
  archived bool [not null, note: 'default false']
  company_id int [ref: > companies.id, not null]
  stores_id int [ref: > stores.id, not null]
  bank_id int [ref: > banks.id]
  promo_code varchar
  created_at timestamp
  updated_at timestamp
}

Table reviews {
  user_id int [ref: > users.id, not null]
  company_id int [ref: > companies.id, not null]
  value int [not null, note: 'from 0 to 5']
  comments text
}

Table employees {
  user_id int [ref: > users.id, not null]
  company_id int [ref: > companies.id, not null]
}

Table categories {
  id int [primary key]
  value varchar
}

Table countries {
  id int [primary key]
  value varchar
}

Table cities {
  id int [primary key]
  country_id int [ref: > countries.id, not null]
  value varchar
}

enum role {
  USER
  ADMIN
  SUPER_ADMIN
}

enum benefit_type {
  DISCOUNT
  CASHBACK
  PROMO_CODE
}
